# nuqr_featurizer

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
benches/: benchmark_suite.rs  gpu_features.rs  mvp_morphology.rs  python_morphology_baseline.py
docs/: developer-guide.md
examples/: quickstart.ipynb
python/nuqr_featurizer/: __init__.py  __init__.pyi  _core.pyi  io.py
python/nuxplore/: __init__.py  __init__.pyi  _core.pyi  batch.py  batch.pyi  io.py
scripts/: batch_extract_and_crop.py  compare_with_python_features.py
src/: lib.rs
src/core/: error.rs  logging.rs  mod.rs  numpy_interop.rs  types.rs
src/features/: ccsm.rs  ccsm_clahe.rs  ccsm_distance_transform.rs  ccsm_gmm.rs  ccsm_morphops.rs  glcm.rs  he_color.rs  hog.rs  intensity.rs  lbp.rs  mod.rs  moments.rs  morphology.rs  neis.rs  shape.rs  spatial.rs
src/gpu/: backend.rs  clahe_gpu.rs  edt_gpu.rs  glcm_gpu.rs  hog_gpu.rs  mod.rs
src/gpu/shaders/: clahe.wgsl  edt.wgsl  glcm.wgsl  hog.wgsl
src/io/: image.rs  mat.rs  mod.rs
src/stain_norm/: mod.rs  vahadane.rs
tests/: test_batch_api.py  test_crop_export.rs  test_full_pipeline_integration.rs  test_glcm_validation.rs  test_infrastructure.rs  test_phase2_mvp.rs
