[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "nuqr-featurizer"
version = "0.1.0"
description = "High-performance histopathology feature extraction with GPU acceleration"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "NuQR Team"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.19",
]

[project.optional-dependencies]
io = [
    "pillow>=10.0",
    "scipy>=1.7",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "pillow>=10.0",
    "scikit-image>=0.19",
    "scipy>=1.7",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "nuqr_featurizer._core"
python-source = "python"
